Adjust carousel text to prevent overlap

--- a/themes/trc/sass/_page-templates.scss
+++ b/themes/trc/sass/_page-templates.scss
@@ -864,6 +864,7 @@
   background: $color_brand-teal-dark;
   color: #FFF;
   text-transform: uppercase;
+  text-align: center;
 }
 
 .global-goals-content-wrapper {
@@ -974,6 +975,7 @@
 
 
 .carousel-sub {
+  background: $color_brand-yellow;
   @include font-open-light;
   display: flex;
   flex-flow: column nowrap;
@@ -981,6 +983,9 @@
   justify-content: center;
   padding: 1rem 2rem 1rem 2rem;
   color: #FFF;
+  p {
+    margin-top: 2rem;
+  }
 }
 
 .carousel-sub-header {
